@@ -1,11 +1,13 @@
 package trinity.play2learn.backend.activity.activity.services.student;
 
 import java.util.List;
+import java.util.Map;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 
 import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
-import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -13,10 +15,9 @@ import lombok.AllArgsConstructor;
 import trinity.play2learn.backend.activity.activity.dtos.activityStudent.ActivityStudentStateResponseDto;
 import trinity.play2learn.backend.activity.activity.mappers.ActivityMapper;
 import trinity.play2learn.backend.activity.activity.models.activityCompleted.ActivityCompleted;
-import trinity.play2learn.backend.activity.activity.models.activityCompleted.ActivityCompletedState;
+import trinity.play2learn.backend.activity.activity.repositories.ActivityApprovedNativeRepository;
 import trinity.play2learn.backend.activity.activity.repositories.IActivityCompletedRepository;
 import trinity.play2learn.backend.activity.activity.services.interfaces.IActivityApprovedListPaginatedService;
-import trinity.play2learn.backend.activity.activity.specs.ActivityCompletedSpecs;
 import trinity.play2learn.backend.admin.student.models.Student;
 import trinity.play2learn.backend.admin.student.services.interfaces.IStudentGetByEmailService;
 import trinity.play2learn.backend.configs.response.PaginatedData;
@@ -29,6 +30,7 @@ import trinity.play2learn.backend.utils.PaginatorUtils;
 public class ActivityApprovedListPaginatedService implements IActivityApprovedListPaginatedService {
 
     private final IStudentGetByEmailService studentGetByEmailService;
+    private final ActivityApprovedNativeRepository activityApprovedNativeRepository;
     private final IActivityCompletedRepository activityCompletedRepository;
 
     @Override
@@ -39,36 +41,38 @@ public class ActivityApprovedListPaginatedService implements IActivityApprovedLi
 
         Student student = studentGetByEmailService.getByEmail(user.getEmail());
 
-        Pageable pageable = PaginatorUtils.buildPageableWithSortPrefix(page, size, orderBy, orderType, "activity");
+        Pageable pageable = PaginatorUtils.buildPageable(page, size, orderBy, orderType);
 
-        Specification<ActivityCompleted> spec = Specification.where(ActivityCompletedSpecs.filterByStudent(student));
-        spec = spec.and(ActivityCompletedSpecs.filterByState(ActivityCompletedState.APPROVED));
-        spec = spec.and(ActivityCompletedSpecs.isLatestCompletionForStudent(student));
-        spec = spec.and(ActivityCompletedSpecs.activityNotDeleted());
-        spec = spec.and(ActivityCompletedSpecs.activityBelongsToStudent(student));
+        Page<Long> completionIdPage = activityApprovedNativeRepository.findApprovedCompletionIds(
+                student, pageable, search, filters, filterValues);
 
-        if (search != null && !search.isBlank()) {
-            spec = spec.and(ActivityCompletedSpecs.activityNameContains(search));
+        if (completionIdPage.isEmpty()) {
+            return PaginationHelper.fromPage(Page.empty(pageable), List.of());
         }
 
-        if (filters != null && filterValues != null && filters.size() == filterValues.size()) {
-            for (int i = 0; i < filters.size(); i++) {
-                spec = spec.and(ActivityCompletedSpecs.activityGenericFilter(filters.get(i), filterValues.get(i)));
-            }
-        }
+        List<ActivityCompleted> completions = loadCompletionsPreservingOrder(completionIdPage.getContent());
+        Page<ActivityCompleted> pageResult = new PageImpl<>(completions, pageable, completionIdPage.getTotalElements());
 
-        Page<ActivityCompleted> pageResult = activityCompletedRepository.findAll(spec, pageable);
-
-        List<ActivityStudentStateResponseDto> dtos = pageResult.getContent().stream()
+        List<ActivityStudentStateResponseDto> dtos = completions.stream()
                 .map(activityCompleted -> ActivityMapper.toStudentStateDto(
                         activityCompleted.getActivity(),
                         activityCompleted.getRemainingAttempts(),
                         activityCompleted.getReward(),
                         activityCompleted.getCompletedAt(),
                         activityCompleted.getState()))
-                .collect(Collectors.toList());
+                .toList();
 
         return PaginationHelper.fromPage(pageResult, dtos);
     }
 
+    private List<ActivityCompleted> loadCompletionsPreservingOrder(List<Long> orderedIds) {
+        Map<Long, ActivityCompleted> completionsById = activityCompletedRepository
+                .findAllByIdInWithActivityAndSubject(orderedIds).stream()
+                .collect(Collectors.toMap(ActivityCompleted::getId, Function.identity()));
+
+        return orderedIds.stream()
+                .map(completionsById::get)
+                .filter(completion -> completion != null)
+                .toList();
+    }
 }
